[package]
name = "bls-signatures"
description = ""
version = "1.2.5"
edition = "2021"

[features]
legacy = []
bip32 = []
use_serde = ["serde"]
dash_helpers = ["rand"]
default = [ "legacy", "bip32", "dash_helpers", "use_serde"]
apple = ["bls-osmium-sys/apple"]

[dependencies]
bls-osmium-sys = { path = "../bls-osmium-sys" }
serde = { version= "1.0.160", features = ["derive"], optional = true}
rand = { version= "0.8.5", optional = true}
